--- a/src/fr/bg/main/vues/SplashScreen.fxml
+++ b/src/fr/bg/main/vues/SplashScreen.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="parent" prefHeight="600.0" prefWidth="1024.0" styleClass="parent" stylesheets="@../assets/styles/css.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.controleurs.SplashScreenController">
+<AnchorPane fx:id="parent" prefHeight="600.0" prefWidth="1024.0" styleClass="parent" stylesheets="@../assets/styles/css.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.bg.main.controleurs.SplashScreenController">
     <children>
         <Label layoutX="384.0" layoutY="222.0" text="Welcome">
             <font>
