--- a/src/fr/bg/main/vues/AdminView.fxml
+++ b/src/fr/bg/main/vues/AdminView.fxml
@@ -14,7 +14,7 @@
         <URL value="@../assets/styles/css.css" />
     </stylesheets>
    <children>
-      <BorderPane layoutX="-6.0" prefHeight="768.0" prefWidth="1024.0" stylesheets="">
+      <BorderPane layoutX="-6.0" prefHeight="768.0" prefWidth="1024.0" stylesheets="@../assets/styles/css.css">
          <top>
             <HBox prefHeight="100.0" prefWidth="132.0" BorderPane.alignment="CENTER">
                <children>
