--- a/src/fr/bg/main/assets/styles/dashbord.css
+++ b/src/fr/bg/main/assets/styles/dashbord.css
@@ -10,6 +10,10 @@
 .btns:hover{
     -fx-background-color: #202332;
 }
+.btns1{
+    -fx-background-color: transparent;
+}
+
 .box{
     -fx-border-color: #3B3F4B;
     -fx-border-width: 1px 0px 0px 0px;
