--- a/src/fr/bg/main/vues/SplashScreen.fxml
+++ b/src/fr/bg/main/vues/SplashScreen.fxml
@@ -1,12 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.*?>
-<?import javafx.scene.image.*?>
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.effect.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
@@ -14,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="parent" prefHeight="600.0" prefWidth="1024.0" styleClass="parent" stylesheets="@../assets/styles/css.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.bg.main.controleurs.SplashScreenController">
+<AnchorPane fx:id="parent" prefHeight="600.0" prefWidth="1024.0" styleClass="parent" stylesheets="@../assets/styles/css.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.bg.main.controleurs.SplashScreenController">
     <children>
         <Label layoutX="384.0" layoutY="222.0" text="Welcome">
             <font>
@@ -43,6 +36,11 @@
       <ImageView fitHeight="100.0" fitWidth="458.0" layoutX="43.0" layoutY="14.0" pickOnBounds="true" smooth="false">
          <image>
             <Image url="@../assets/images/Beumer_Group_Log50.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="50.0" fitWidth="51.0" layoutX="634.0" layoutY="298.0">
+         <image>
+            <Image url="@../assets/images/relaislogo.gif" />
          </image>
       </ImageView>
     </children>
