--- a/src/fr/bg/main/vues/DashBoard.fxml
+++ b/src/fr/bg/main/vues/DashBoard.fxml
@@ -276,7 +276,7 @@
             <Insets />
          </opaqueInsets>
         </VBox>
-      <AnchorPane layoutX="300.0" layoutY="-2.0" prefHeight="602.0" prefWidth="724.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="300.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="-2.0">
+      <AnchorPane fx:id="p2" layoutX="300.0" layoutY="-2.0" prefHeight="602.0" prefWidth="724.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="300.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="-2.0">
          <children>
               <VBox fx:id="gestionVBox" prefHeight="600.0" prefWidth="724.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                   <children>
