--- a/src/fr/bg/main/vues/DashBoard.fxml
+++ b/src/fr/bg/main/vues/DashBoard.fxml
@@ -147,7 +147,7 @@
                   <Insets left="10.0" />
                </padding>
             </HBox>
-                <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="252.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="300.0" styleClass="btns">
+                <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="252.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#gotoDocuments" prefHeight="40.0" prefWidth="300.0" styleClass="btns">
                     <children>
                         <Label text="Documents" textFill="#7c8184">
                             <font>
