--- a/src/fr/bg/main/vues/DashBoard.fxml
+++ b/src/fr/bg/main/vues/DashBoard.fxml
@@ -1,15 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
-<?import com.sibvisions.rad.ui.javafx.ext.FXButton?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.chart.CategoryAxis?>
-<?import javafx.scene.chart.LineChart?>
-<?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -36,7 +29,7 @@
             </HBox>
                 <HBox alignment="CENTER_LEFT">
                     <children>
-                        <TextField promptText="Search" style="-fx-background-color: transparent; -fx-text-fill: #fff;" HBox.hgrow="ALWAYS">
+                        <TextField onInputMethodTextChanged="#gotoGestionSearch" onKeyPressed="#gotoGestionSearch" onKeyReleased="#gotoGestionSearch" onKeyTyped="#gotoGestionSearch" promptText="Search" style="-fx-background-color: transparent; -fx-text-fill: #fff;" HBox.hgrow="ALWAYS">
                             <font>
                                 <Font name="Calibri Light" size="14.0" />
                             </font>
@@ -49,7 +42,7 @@
                         <Insets top="10.0" />
                     </VBox.margin>
                 </HBox>
-                <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="95.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#gotoDashbord" prefHeight="40.0" prefWidth="300.0" styleClass="btns">
+                <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="95.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#gotoDashBoardInit" prefHeight="40.0" prefWidth="300.0" styleClass="btns">
                     <children>
                         <Label text="Dashboard" textFill="#7c8184">
                             <font>
@@ -68,7 +61,7 @@
                     </VBox.margin>
                    
                 </HBox>
-                <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="132.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="300.0" styleClass="btns">
+                <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="132.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#gotoGestionUtilisateur" prefHeight="40.0" prefWidth="300.0" styleClass="btns">
                     <children>
                        
                         <Label text="Gestion d'utilisateur" textFill="#7c8184">
@@ -85,7 +78,7 @@
                     </padding>
                   
                 </HBox>
-            <HBox alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="300.0" styleClass="btns">
+            <HBox alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#gotoGestionPlanning" prefHeight="40.0" prefWidth="300.0" styleClass="btns">
                <children>
                   <Label text="gestion de planning" textFill="#7c8184">
                      <font>
@@ -100,7 +93,7 @@
                   <Insets left="10.0" />
                </padding>
             </HBox>
-                <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="132.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="300.0" styleClass="btns">
+                <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="132.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#gotoGestionParc" prefHeight="40.0" prefWidth="300.0" styleClass="btns">
                     <children>
                          <Label text="Gestion du parc" textFill="#7c8184">
                             <font>
@@ -116,7 +109,7 @@
                     </padding>
                
                 </HBox>
-                <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="172.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="300.0" styleClass="btns">
+                <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="172.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#gotoGestionStock" prefHeight="40.0" prefWidth="300.0" styleClass="btns">
                     <children>
                         <Label text="gestion de stock" textFill="#7c8184">
                             <font>
@@ -132,7 +125,7 @@
                     </padding>
                    
                 </HBox>
-            <HBox alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="300.0" styleClass="btns">
+            <HBox alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#gotoGestionIntervention" prefHeight="40.0" prefWidth="300.0" styleClass="btns">
                <children>
                   <Label text="gestion d'intervention" textFill="#7c8184">
                      <font>
@@ -278,145 +271,7 @@
         </VBox>
       <AnchorPane fx:id="p2" layoutX="300.0" layoutY="-2.0" prefHeight="602.0" prefWidth="724.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="300.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="-2.0">
          <children>
-              <VBox fx:id="gestionVBox" prefHeight="600.0" prefWidth="724.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                  <children>
-                  <HBox alignment="CENTER" maxWidth="1.7976931348623157E308" prefHeight="70.0" prefWidth="724.0" style="-fx-background-color: #edeaea;">
-                     <children>
-                              <Label text="Dashboard" textFill="#7c8184">
-                                  <font>
-                                      <Font size="18.0" />
-                                  </font>
-                              </Label>
-                        <VBox alignment="TOP_CENTER" layoutX="260.0" layoutY="10.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="58.0" prefWidth="419.0" styleClass="card-03" HBox.hgrow="ALWAYS" />
-                        <FXButton onAction="#handleMenuFullScreen" onDragDone="#handleMenuFullScreen" styleClass="btns1" text="Full Screen" />
-                                                 <Label alignment="CENTER" depthTest="DISABLE" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="20.0" prefWidth="20.0" styleClass="round-lbl" text="8" textAlignment="RIGHT" textFill="WHITE">
-                                  <font>
-                                      <Font name="System Bold" size="12.0" />
-                                  </font>
-                              </Label>
-                        <MenuButton fx:id="menuButon" alignment="TOP_RIGHT" contentDisplay="RIGHT" mnemonicParsing="false" prefHeight="58.0" prefWidth="98.0" styleClass="btns1" textAlignment="RIGHT">
-                           <items>
-                              <MenuItem mnemonicParsing="false" onAction="#processLogout" text="Deconnexion" />
-                              <MenuItem mnemonicParsing="false" text="Voir mon profil" />
-                              <MenuItem mnemonicParsing="false" onAction="#close_app" text="Sortir" />
-                           </items>
-                           <graphic>
-                              <ImageView fx:id="imageView" fitHeight="48.0" fitWidth="62.0" pickOnBounds="true">
-                                 <image>
-                                    <Image url="@../assets/images/admin.png" />
-                                 </image>
-                              </ImageView>
-                           </graphic>
-                           <HBox.margin>
-                              <Insets left="5.0" right="5.0" />
-                           </HBox.margin>
-                        </MenuButton>
-                     </children>
-                     <VBox.margin>
-                        <Insets />
-                     </VBox.margin>
-                  </HBox>
-                  <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" nodeOrientation="RIGHT_TO_LEFT" prefHeight="564.0" prefWidth="724.0">
-                     <children>
-                        <HBox alignment="TOP_RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" nodeOrientation="RIGHT_TO_LEFT" prefHeight="209.0" prefWidth="738.0">
-                           <children>
-                              <LineChart maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="209.0" prefWidth="690.0">
-                                <xAxis>
-                                  <CategoryAxis maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" side="BOTTOM" />
-                                </xAxis>
-                                <yAxis>
-                                  <NumberAxis maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" side="LEFT" />
-                                </yAxis>
-                              </LineChart>
-                           </children>
-                        </HBox>
-                     </children>
-                  </HBox>
-                  <HBox alignment="CENTER" maxWidth="1.7976931348623157E308" prefHeight="70.0" prefWidth="724.0" style="-fx-background-color: #edeaea;">
-                     <children>
-                        <VBox alignment="TOP_CENTER" layoutX="260.0" layoutY="10.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="58.0" prefWidth="622.0" styleClass="card-03" HBox.hgrow="ALWAYS">
-                           <children>
-                              <Label prefHeight="27.0" prefWidth="120.0" text="Reporting" textFill="#7c8184">
-                                 <font>
-                                    <Font size="18.0" />
-                                 </font>
-                              </Label>
-                           </children>
-                        </VBox>
-                     </children>
-                  </HBox>
-                  <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="291.0" prefWidth="724.0">
-                     <children>
-                        <VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="275.0" prefWidth="230.0" styleClass="card-01" HBox.hgrow="ALWAYS">
-                           <children>
-                              <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="48.0" prefWidth="242.0" style="-fx-background-color: #72D3FE;" text="Total element sur terrains">
-                                 <font>
-                                    <Font name="Ebrima Bold" size="15.0" />
-                                 </font>
-                              </Label>
-                              <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="160.0" prefWidth="160.0" style="-fx-border-color: #72D3FE;" styleClass="round-box">
-                                 <VBox.margin>
-                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                 </VBox.margin>
-                                 <children>
-                                    <ProgressIndicator prefHeight="100.0" prefWidth="100.0" />
-                                 </children>
-                              </HBox>
-                              <Label alignment="CENTER" layoutX="10.0" layoutY="10.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="48.0" prefWidth="250.0" style="-fx-background-color: #72D3FE;" text="0">
-                                 <font>
-                                    <Font name="Ebrima Bold" size="15.0" />
-                                 </font>
-                              </Label>
-                           </children>
-                        </VBox>
-                        <VBox alignment="TOP_CENTER" layoutX="10.0" layoutY="10.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="275.0" prefWidth="230.0" styleClass="card-02" HBox.hgrow="ALWAYS">
-                           <children>
-                              <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="48.0" prefWidth="250.0" style="-fx-background-color: #FFC66C;" text="Total Pièces sur terrain">
-                                 <font>
-                                    <Font name="Ebrima Bold" size="15.0" />
-                                 </font>
-                              </Label>
-                              <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="160.0" prefWidth="160.0" style="-fx-border-color: #72D3FE;" styleClass="round-box">
-                                 <VBox.margin>
-                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                 </VBox.margin>
-                                 <children>
-                                    <ProgressIndicator prefHeight="100.0" prefWidth="100.0" />
-                                 </children>
-                              </HBox>
-                              <Label alignment="CENTER" layoutX="10.0" layoutY="10.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="48.0" prefWidth="250.0" style="-fx-background-color: #FFC66C;" text="0">
-                                 <font>
-                                    <Font name="Ebrima Bold" size="15.0" />
-                                 </font>
-                              </Label>
-                           </children>
-                        </VBox>
-                        <VBox alignment="TOP_CENTER" layoutX="260.0" layoutY="10.0" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="275.0" prefWidth="230.0" styleClass="card-03" HBox.hgrow="ALWAYS">
-                           <children>
-                              <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="48.0" prefWidth="250.0" style="-fx-background-color: #45B7AF;" text="Total utilisateurs">
-                                 <font>
-                                    <Font name="Ebrima Bold" size="15.0" />
-                                 </font>
-                              </Label>
-                              <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="160.0" prefWidth="160.0" style="-fx-border-color: #72D3FE;" styleClass="round-box">
-                                 <VBox.margin>
-                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                 </VBox.margin>
-                                 <children>
-                                    <ProgressIndicator prefHeight="100.0" prefWidth="100.0" />
-                                 </children>
-                              </HBox>
-                              <Label alignment="CENTER" layoutX="10.0" layoutY="10.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="48.0" prefWidth="250.0" style="-fx-background-color: #45B7AF;" text="47%">
-                                 <font>
-                                    <Font name="Ebrima Bold" size="15.0" />
-                                 </font>
-                              </Label>
-                           </children>
-                        </VBox>
-                     </children>
-                  </HBox>
-                  </children>
-              </VBox>
+              
          </children>
       </AnchorPane>
     
