--- a/src/fr/bg/main/vues/gestionParc.fxml
+++ b/src/fr/bg/main/vues/gestionParc.fxml
@@ -20,264 +20,8 @@
 <?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="parent" prefHeight="600" prefWidth="1024.0" styleClass="parent" stylesheets="@../assets/styles/dashbord.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.bg.main.controleurs.GestionParcController">
-    <children>
-        <VBox alignment="TOP_CENTER" prefHeight="600.0" prefWidth="300.0" styleClass="sidebar" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
-            <children>
-            <HBox prefHeight="53.0" prefWidth="300.0">
-               <children>
-                      <Label prefHeight="39.0" prefWidth="300.0" style="-fx-background-color: #00A2D3;" text="Admin Panel" textFill="WHITE">
-                          <padding>
-                              <Insets left="10.0" />
-                          </padding>
-                          <font>
-                              <Font name="Ebrima" size="18.0" />
-                          </font>
-                      </Label>
-               </children>
-            </HBox>
-                <HBox alignment="CENTER_LEFT">
-                    <children>
-                        <TextField promptText="Search" style="-fx-background-color: transparent; -fx-text-fill: #fff;" HBox.hgrow="ALWAYS">
-                            <font>
-                                <Font name="Calibri Light" size="14.0" />
-                            </font>
-                        </TextField>
-                    </children>
-                    <padding>
-                        <Insets left="10.0" />
-                    </padding>
-                    <VBox.margin>
-                        <Insets top="10.0" />
-                    </VBox.margin>
-                </HBox>
-                <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="95.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#gotoDashbord" prefHeight="40.0" prefWidth="300.0" styleClass="btns">
-                    <children>
-                        <Label text="Dashboard" textFill="#7c8184">
-                            <font>
-                                <Font name="Calibri Light" size="15.0" />
-                            </font>
-                            <HBox.margin>
-                                <Insets left="10.0" />
-                            </HBox.margin>
-                        </Label>
-                    </children>
-                    <padding>
-                        <Insets left="10.0" />
-                    </padding>
-                    <VBox.margin>
-                        <Insets top="10.0" />
-                    </VBox.margin>
-                   
-                </HBox>
-                <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="132.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="300.0" styleClass="btns">
-                    <children>
-                       
-                        <Label text="Gestion d'utilisateur" textFill="#7c8184">
-                            <font>
-                                <Font name="Calibri Light" size="15.0" />
-                            </font>
-                            <HBox.margin>
-                                <Insets left="10.0" />
-                            </HBox.margin>
-                        </Label>
-                    </children>
-                    <padding>
-                        <Insets left="10.0" />
-                    </padding>
-                  
-                </HBox>
-            <HBox alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="300.0" styleClass="btns">
-               <children>
-                  <Label text="gestion de planning" textFill="#7c8184">
-                     <font>
-                        <Font name="Calibri Light" size="15.0" />
-                     </font>
-                     <HBox.margin>
-                        <Insets left="10.0" />
-                     </HBox.margin>
-                  </Label>
-               </children>
-               <padding>
-                  <Insets left="10.0" />
-               </padding>
-            </HBox>
-                <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="132.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="300.0" styleClass="btns">
-                    <children>
-                         <Label text="Gestion du parc" textFill="#7c8184">
-                            <font>
-                                <Font name="Calibri Light" size="15.0" />
-                            </font>
-                            <HBox.margin>
-                                <Insets left="10.0" />
-                            </HBox.margin>
-                        </Label>
-                    </children>
-                    <padding>
-                        <Insets left="10.0" />
-                    </padding>
-               
-                </HBox>
-                <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="172.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="300.0" styleClass="btns">
-                    <children>
-                        <Label text="gestion de stock" textFill="#7c8184">
-                            <font>
-                                <Font name="Calibri Light" size="15.0" />
-                            </font>
-                            <HBox.margin>
-                                <Insets left="10.0" />
-                            </HBox.margin>
-                        </Label>
-                    </children>
-                    <padding>
-                        <Insets left="10.0" />
-                    </padding>
-                   
-                </HBox>
-            <HBox alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="300.0" styleClass="btns">
-               <children>
-                  <Label text="gestion d'intervention" textFill="#7c8184">
-                     <font>
-                        <Font name="Calibri Light" size="15.0" />
-                     </font>
-                     <HBox.margin>
-                        <Insets left="10.0" />
-                     </HBox.margin>
-                  </Label>
-               </children>
-               <padding>
-                  <Insets left="10.0" />
-               </padding>
-            </HBox>
-                <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="252.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="300.0" styleClass="btns">
-                    <children>
-                        <Label text="Documents" textFill="#7c8184">
-                            <font>
-                                <Font name="Calibri Light" size="15.0" />
-                            </font>
-                            <HBox.margin>
-                                <Insets left="10.0" />
-                            </HBox.margin>
-                        </Label>
-                    </children>
-                    <padding>
-                        <Insets left="10.0" />
-                    </padding>
-                 
-                </HBox>
-                <VBox prefHeight="171.0" prefWidth="300.0" styleClass="box" VBox.vgrow="ALWAYS">
-                    <children>
-                        <Label text="TEAM INVOLVED" textFill="#7c8184">
-                            <font>
-                                <Font name="Arial Special G1" size="14.0" />
-                            </font>
-                        </Label>
-                        <HBox alignment="CENTER_LEFT">
-                            <children>
-                                <ImageView fitHeight="35.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
-                                    <image>
-                                        <Image url="@../assets/images/avatar-01.jpg" />
-                                    </image>
-                                </ImageView>
-                                <VBox>
-                                    <children>
-                                        <Label text="Farid Ouazzane" textFill="#7c8184">
-                                            <font>
-                                                <Font size="14.0" />
-                                            </font>
-                                        </Label>
-                                        <Label layoutX="10.0" layoutY="10.0" text="Responsable de maintenance" textFill="#7c8184">
-                                            <font>
-                                                <Font size="10.0" />
-                                            </font>
-                                        </Label>
-                                    </children>
-                                    <HBox.margin>
-                                        <Insets left="10.0" />
-                                    </HBox.margin>
-                                </VBox>
-                            </children>
-                            <VBox.margin>
-                                <Insets top="10.0" />
-                            </VBox.margin>
-                        </HBox>
-                        <HBox alignment="CENTER_LEFT" layoutX="20.0" layoutY="47.0">
-                            <children>
-                                <ImageView fitHeight="35.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
-                                    <image>
-                                        <Image url="@../assets/images/avatar-02.jpg" />
-                                    </image>
-                                </ImageView>
-                                <VBox>
-                                    <children>
-                                        <Label text="Sebastian" textFill="#7c8184">
-                                            <font>
-                                                <Font size="14.0" />
-                                            </font>
-                                        </Label>
-                                        <Label layoutX="10.0" layoutY="10.0" text="Graphic Designer" textFill="#7c8184">
-                                            <font>
-                                                <Font size="10.0" />
-                                            </font>
-                                        </Label>
-                                    </children>
-                                    <HBox.margin>
-                                        <Insets left="10.0" />
-                                    </HBox.margin>
-                                </VBox>
-                            </children>
-                        </HBox>
-                        <HBox alignment="CENTER_LEFT" layoutX="20.0" layoutY="47.0">
-                            <children>
-                                <ImageView fitHeight="35.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
-                                    <image>
-                                        <Image url="@../assets/images/avatar-05.jpg" />
-                                    </image>
-                                </ImageView>
-                                <VBox>
-                                    <children>
-                                        <Label text="James" textFill="#7c8184">
-                                            <font>
-                                                <Font size="14.0" />
-                                            </font>
-                                        </Label>
-                                        <Label layoutX="10.0" layoutY="10.0" text="Database Administrator" textFill="#7c8184">
-                                            <font>
-                                                <Font size="10.0" />
-                                            </font>
-                                        </Label>
-                                    </children>
-                                    <HBox.margin>
-                                        <Insets left="10.0" />
-                                    </HBox.margin>
-                                </VBox>
-                            </children>
-                        </HBox>
-                        <HBox alignment="CENTER_LEFT" layoutX="20.0" layoutY="84.0" />
-                    </children>
-                    <VBox.margin>
-                        <Insets />
-                    </VBox.margin>
-                    <padding>
-                        <Insets left="10.0" top="10.0" />
-                    </padding>
-                </VBox>
-                <JFXButton buttonType="RAISED" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="34.0" prefWidth="200.0" ripplerFill="WHITE" style="-fx-background-color: #00A2D3; -fx-background-radius: 0px;" text="Add Teammate" textFill="WHITE">
-                    <VBox.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                    </VBox.margin>
-                    <font>
-                        <Font name="Calibri Light" size="14.0" />
-                    </font>
-                    <graphic>
-                        </graphic>
-                     
-                </JFXButton>
-            </children>
-         <opaqueInsets>
-            <Insets />
-         </opaqueInsets>
-        </VBox>
-        <VBox fx:id="gestionVBox" layoutX="300.0" prefHeight="600.0" prefWidth="724.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="300.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+     <children>
+        <VBox fx:id="gestionVBox" prefHeight="600.0" prefWidth="1024.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <children>
             <HBox alignment="CENTER" maxWidth="1.7976931348623157E308" prefHeight="70.0" prefWidth="724.0" style="-fx-background-color: #edeaea;">
                <children>
